@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1663] fixed y axis calculation in stacked graphs (Aly)
  - [ZBX-1468] fixed editing user media types on node with id > 99 (Vedmak)
  - [ZBX-1727] add missing S_INCORRECT_EXPRESSION localisation string (Richlv)
  - [ZBX-1659] fixed checked marks on multilabel selection on map (Aly)
